--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <p>Nếu không được chuyển hướng, nhấn vào đây: 
-    <a href="https://zalo.me/0972556780">Chat Zalo với Quốc Nam</a>
+    <a href="https://zalo.me/0972556780">Chat Zalo với Quocnam</a>
   </p>
 </body>
 </html>
